--- a/CommonUtil/.classpath
+++ b/CommonUtil/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.36.jar"/>
+	<classpathentry kind="lib" path="lib/logback-classic-1.2.11.jar"/>
+	<classpathentry kind="lib" path="lib/logback-core-1.2.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
